fixed issue with typewriter expanding the div and pushing content to the right along with title spacing

--- a/app/componentcss/landing.css
+++ b/app/componentcss/landing.css
@@ -12,11 +12,18 @@
 .landing-content {
   font-size: 2.5rem;
   color: white;
-  margin: 10px 0;
 }
 
 .landing-typewriter {
   font-size: 5rem;
+}
+.landing-content {
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+}
+.landing-title {
+  display: flex;
 }
 
 .landing-cluster {
